--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby clean && gatsby build",
+    "d": "gatsby develop",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
@@ -14,17 +15,31 @@
   },
   "dependencies": {
     "@agility/gatsby-source-agilitycms": "^1.4.0",
+    "@tailwindcss/ui": "^0.6.2",
+    "bootstrap": "^4.5.2",
     "dotenv": "^8.1.0",
     "gatsby": "^2.21.4",
+    "gatsby-cli": "^2.12.102",
     "gatsby-image": "^2.3.2",
+    "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-netlify": "^2.1.33",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sass": "^2.3.14",
     "gatsby-plugin-sharp": "^2.5.1",
     "gatsby-source-filesystem": "^2.2.1",
     "gatsby-transformer-sharp": "^2.4.1",
+    "hamburgers": "^1.1.3",
+    "node-sass": "^4.14.1",
+    "node-sass-magic-importer": "^5.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "slick-carousel": "^1.8.1",
+    "tailwind-bootstrap-grid": "^2.2.2",
+    "tailwindcss": "^1.8.10",
+    "tailwindcss-interaction-variants": "^5.0.0",
     "truncate-html": "^1.0.2"
   },
   "devDependencies": {
