--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "gatsby-source-filesystem": "^2.2.1",
     "gatsby-transformer-sharp": "^2.4.1",
     "hamburgers": "^1.1.3",
+    "lazysizes": "^5.2.2",
     "node-sass": "^4.14.1",
     "node-sass-magic-importer": "^5.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.3.2",
     "tailwind-bootstrap-grid": "^2.2.2",
     "tailwindcss": "^1.8.10",
     "tailwindcss-interaction-variants": "^5.0.0",
