--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "2.3.0",
   "license": "MIT",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "b": "gatsby clean && gatsby build",
     "build": "gatsby clean && gatsby build",
