--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "b": "gatsby clean && gatsby build",
     "build": "gatsby clean && gatsby build",
     "d": "gatsby develop",
+    "dc": "gatsby clean && gatsby develop",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
@@ -39,6 +40,7 @@
     "gatsby-source-filesystem": "^2.2.1",
     "gatsby-transformer-sharp": "^2.4.1",
     "hamburgers": "^1.1.3",
+    "jquery": "3.4.1",
     "lazysizes": "^5.2.2",
     "node-sass": "^4.14.1",
     "node-sass-magic-importer": "^5.3.2",
