--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-plyr": "^2.2.0",
     "react-vivus": "^0.0.2",
     "slick-carousel": "^1.8.1",
