--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/ui": "^0.6.2",
     "babel-preset-gatsby": "^0.5.13",
     "bootstrap": "^4.5.2",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.1.0",
     "gatsby": "^2.21.4",
     "gatsby-cli": "^2.12.106",
