--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@agility/gatsby-source-agilitycms": "^1.4.0",
     "@loadable/component": "^5.13.2",
     "@tailwindcss/ui": "^0.6.2",
+    "autoprefixer": "9.7.1",
+    "axios": "^0.20.0",
     "babel-preset-gatsby": "^0.5.13",
     "bootstrap": "^4.5.2",
+    "cssnano": "^4.1.10",
     "date-fns": "^2.16.1",
     "dotenv": "^8.1.0",
     "gatsby": "^2.21.4",
@@ -45,12 +48,16 @@
     "lazysizes": "^5.2.2",
     "node-sass": "^4.14.1",
     "node-sass-magic-importer": "^5.3.2",
+    "noty": "^3.2.0-beta",
+    "postcss-pxtorem": "^5.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^5.2.1",
     "react-outside-click-handler": "^1.3.0",
     "react-plyr": "^2.2.0",
     "react-vivus": "^0.0.2",
+    "rucksack-css": "^1.0.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.3.2",
     "tailwind-bootstrap-grid": "^2.2.2",
