--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gatsby-source-filesystem": "^2.2.1",
     "gatsby-transformer-sharp": "^2.4.1",
     "hamburgers": "^1.1.3",
+    "headroom.js": "^0.12.0",
     "jquery": "3.4.1",
     "lazysizes": "^5.2.2",
     "node-sass": "^4.14.1",
