--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "hamburgers": "^1.1.3",
     "headroom.js": "^0.12.0",
     "jquery": "3.4.1",
+    "jquery.scrollto": "^2.1.2",
     "lazysizes": "^5.2.2",
     "node-sass": "^4.14.1",
     "node-sass-magic-importer": "^5.3.2",
