--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cssnano": "^4.1.10",
     "date-fns": "^2.16.1",
     "dotenv": "^8.1.0",
+    "encodeurl": "^1.0.2",
     "gatsby": "^2.21.4",
     "gatsby-cli": "^2.12.106",
     "gatsby-image": "^2.3.2",
