--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-sitemap": "^2.4.15",
     "gatsby-source-filesystem": "^2.2.1",
     "gatsby-transformer-sharp": "^2.4.1",
+    "gsap": "^2.1.3",
     "hamburgers": "^1.1.3",
     "headroom.js": "^0.12.0",
     "jquery": "3.4.1",
@@ -62,6 +63,7 @@
     "react-plyr": "^2.2.0",
     "react-vivus": "^0.0.2",
     "rucksack-css": "^1.0.2",
+    "scrollmagic": "^2.0.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.3.2",
     "tailwind-bootstrap-grid": "^2.2.2",
