--- a/package.json
+++ b/package.json
@@ -1,88 +1,89 @@
 {
-  "name": "agility-gatsby-starter",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
-  "version": "2.3.0",
-  "license": "MIT",
-  "engines": {
-    "node": "12.x"
-  },
-  "scripts": {
-    "b": "gatsby clean && gatsby build",
-    "build": "gatsby clean && gatsby build",
-    "d": "gatsby develop",
-    "dc": "gatsby clean && gatsby develop",
-    "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
-    "s": "gatsby serve",
-    "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
-  },
-  "dependencies": {
-    "@agility/gatsby-source-agilitycms": "^1.4.0",
-    "@loadable/component": "^5.13.2",
-    "@tailwindcss/ui": "^0.6.2",
-    "aos": "^2.3.4",
-    "autoprefixer": "9.7.1",
-    "axios": "^0.20.0",
-    "babel-preset-gatsby": "^0.5.13",
-    "bootstrap": "^4.5.2",
-    "cssnano": "^4.1.10",
-    "date-fns": "^2.16.1",
-    "dotenv": "^8.1.0",
-    "encodeurl": "^1.0.2",
-    "gatsby": "^2.21.4",
-    "gatsby-cli": "^2.12.106",
-    "gatsby-image": "^2.3.2",
-    "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-netlify": "^2.1.33",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sass": "^2.3.14",
-    "gatsby-plugin-sharp": "^2.5.1",
-    "gatsby-plugin-sitemap": "^2.4.15",
-    "gatsby-source-filesystem": "^2.2.1",
-    "gatsby-transformer-sharp": "^2.4.1",
-    "gsap": "^2.1.3",
-    "hamburgers": "^1.1.3",
-    "headroom.js": "^0.12.0",
-    "jquery": "3.4.1",
-    "jquery.scrollto": "^2.1.2",
-    "lazysizes": "^5.2.2",
-    "node-sass": "^4.14.1",
-    "node-sass-magic-importer": "^5.3.2",
-    "noty": "^3.2.0-beta",
-    "postcss-pxtorem": "^5.1.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-google-recaptcha": "^2.1.0",
-    "react-helmet": "^5.2.1",
-    "react-outside-click-handler": "^1.3.0",
-    "react-plyr": "^2.2.0",
-    "react-vivus": "^0.0.2",
-    "rucksack-css": "^1.0.2",
-    "scrollmagic": "^2.0.8",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^6.3.2",
-    "tailwind-bootstrap-grid": "^2.2.2",
-    "tailwindcss": "^1.8.10",
-    "tailwindcss-interaction-variants": "^5.0.0",
-    "truncate-html": "^1.0.2",
-    "vivus": "^0.4.5"
-  },
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/agility/agility-gatsby-starter"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "resolutions": {
-    "query-string": "^5.1.1"
-  }
+	"name": "agility-gatsby-starter",
+	"private": true,
+	"description": "A simplified bare-bones starter for Gatsby",
+	"version": "2.3.0",
+	"license": "MIT",
+	"engines": {
+		"node": ">=12.x"
+	},
+	"scripts": {
+		"b": "gatsby clean && gatsby build",
+		"build": "gatsby clean && gatsby build",
+		"d": "gatsby develop",
+		"dc": "gatsby clean && gatsby develop",
+		"develop": "gatsby develop",
+		"format": "prettier --write src/**/*.{js,jsx}",
+		"start": "npm run develop",
+		"s": "gatsby serve",
+		"serve": "gatsby serve",
+		"test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+	},
+	"dependencies": {
+		"@agility/gatsby-source-agilitycms": "^1.4.0",
+		"@loadable/component": "^5.13.2",
+		"@tailwindcss/ui": "^0.6.2",
+		"aos": "^2.3.4",
+		"autoprefixer": "9.7.1",
+		"axios": "^0.20.0",
+		"babel-preset-gatsby": "^0.5.13",
+		"bootstrap": "^4.5.2",
+		"cssnano": "^4.1.10",
+		"date-fns": "^2.16.1",
+		"dotenv": "^8.1.0",
+		"encodeurl": "^1.0.2",
+		"gatsby": "^2.21.4",
+		"gatsby-cli": "^2.12.106",
+		"gatsby-image": "^2.3.2",
+		"gatsby-plugin-alias-imports": "^1.0.5",
+		"gatsby-plugin-google-analytics": "^2.10.0",
+		"gatsby-plugin-manifest": "^2.4.33",
+		"gatsby-plugin-netlify": "^2.1.33",
+		"gatsby-plugin-purgecss": "^5.0.0",
+		"gatsby-plugin-react-helmet": "^3.1.21",
+		"gatsby-plugin-sass": "^2.3.14",
+		"gatsby-plugin-sharp": "^2.5.1",
+		"gatsby-plugin-sitemap": "^2.4.15",
+		"gatsby-source-filesystem": "^2.2.1",
+		"gatsby-transformer-sharp": "^2.4.1",
+		"gsap": "^2.1.3",
+		"hamburgers": "^1.1.3",
+		"headroom.js": "^0.12.0",
+		"jquery": "3.4.1",
+		"jquery.scrollto": "^2.1.2",
+		"lazysizes": "^5.2.2",
+		"node-sass": "^4.14.1",
+		"node-sass-magic-importer": "^5.3.2",
+		"noty": "^3.2.0-beta",
+		"postcss-pxtorem": "^5.1.1",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-google-recaptcha": "^2.1.0",
+		"react-helmet": "^5.2.1",
+		"react-outside-click-handler": "^1.3.0",
+		"react-plyr": "^2.2.0",
+		"react-vivus": "^0.0.2",
+		"rucksack-css": "^1.0.2",
+		"scrollmagic": "^2.0.8",
+		"slick-carousel": "^1.8.1",
+		"swiper": "^6.3.2",
+		"tailwind-bootstrap-grid": "^2.2.2",
+		"tailwindcss": "^1.8.10",
+		"tailwindcss-interaction-variants": "^5.0.0",
+		"truncate-html": "^1.0.2",
+		"vivus": "^0.4.5"
+	},
+	"devDependencies": {
+		"prettier": "^1.18.2"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/agility/agility-gatsby-starter"
+	},
+	"bugs": {
+		"url": "https://github.com/gatsbyjs/gatsby/issues"
+	},
+	"resolutions": {
+		"query-string": "^5.1.1"
+	}
 }
