--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"date-fns": "^2.16.1",
 		"dotenv": "^8.1.0",
 		"encodeurl": "^1.0.2",
-		"gatsby": "^2.21.4",
+		"gatsby": "@^2.25.0",
 		"gatsby-cli": "^2.12.106",
 		"gatsby-image": "^2.3.2",
 		"gatsby-plugin-alias-imports": "^1.0.5",
