--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"gatsby-image": "^2.3.2",
 		"gatsby-plugin-alias-imports": "^1.0.5",
 		"gatsby-plugin-google-analytics": "^2.10.0",
+		"gatsby-plugin-google-tagmanager": "^2.10.0",
 		"gatsby-plugin-manifest": "^2.4.33",
 		"gatsby-plugin-netlify": "^2.1.33",
 		"gatsby-plugin-purgecss": "^5.0.0",
