--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"gatsby-image": "^2.3.2",
 		"gatsby-plugin-alias-imports": "^1.0.5",
 		"gatsby-plugin-google-gtag": "^2.8.0",
+		"gatsby-plugin-google-tagmanager-timeout": "^2.2.5",
 		"gatsby-plugin-manifest": "^2.4.33",
 		"gatsby-plugin-netlify": "^2.1.33",
 		"gatsby-plugin-purgecss": "^5.0.0",
