--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"gsap": "^2.1.3",
 		"hamburgers": "^1.1.3",
 		"headroom.js": "^0.12.0",
+		"html-react-parser": "^3.0.4",
 		"jquery": "3.4.1",
 		"jquery.scrollto": "^2.1.2",
 		"lazysizes": "^5.2.2",
