--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"react-dom": "^16.8.6",
 		"react-google-recaptcha": "^2.1.0",
 		"react-helmet": "^5.2.1",
+		"react-html-parser": "^2.0.2",
 		"react-outside-click-handler": "^1.3.0",
 		"react-plyr": "^2.2.0",
 		"react-vivus": "^0.0.2",
