feat(node-18): node 18 dependency change

--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
 	"version": "2.3.0",
 	"license": "MIT",
 	"scripts": {
-		"b": "gatsby clean && gatsby build",
-		"build": "gatsby clean && gatsby build",
-		"d": "gatsby develop",
-		"dc": "gatsby clean && gatsby develop",
-		"dev": "gatsby develop",
-		"develop": "gatsby develop",
+		"build": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby clean && gatsby build",
+		"build-unix": "export NODE_OPTIONS=--openssl-legacy-provider && gatsby clean && gatsby build",
+		"dc": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby clean && gatsby develop",
+		"dev": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
+		"develop": "set NODE_OPTIONS=--openssl-legacy-provider && gatsby develop",
 		"format": "prettier --write src/**/*.{js,jsx}",
 		"start": "npm run develop",
 		"s": "gatsby serve",
@@ -40,7 +39,7 @@
 		"gatsby-plugin-netlify": "^2.1.33",
 		"gatsby-plugin-purgecss": "^5.0.0",
 		"gatsby-plugin-react-helmet": "^3.1.21",
-		"gatsby-plugin-sass": "^2.3.14",
+		"gatsby-plugin-sass": "^6.12.0",
 		"gatsby-plugin-sharp": "^2.5.1",
 		"gatsby-plugin-sitemap": "^2.4.15",
 		"gatsby-source-filesystem": "^2.2.1",
@@ -52,8 +51,6 @@
 		"jquery": "3.4.1",
 		"jquery.scrollto": "^2.1.2",
 		"lazysizes": "^5.2.2",
-		"node-sass": "^8.0.0",
-		"node-sass-magic-importer": "^5.3.2",
 		"noty": "^3.2.0-beta",
 		"postcss-pxtorem": "^5.1.1",
 		"react": "^16.8.6",
@@ -65,6 +62,7 @@
 		"react-plyr": "^2.2.0",
 		"react-vivus": "^0.0.2",
 		"rucksack-css": "^1.0.2",
+		"sass": "^1.68.0",
 		"scrollmagic": "^2.0.8",
 		"slick-carousel": "^1.8.1",
 		"swiper": "^6.3.2",
